--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "detours"]
 	path = detours
-	url = https://github.com/microsoft/Detours
+	url = https://github.com/microsoft/Detours.git
